fix breadcrumb spacing

--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -1399,6 +1399,7 @@ svg {
 
 .breadcrumbLast {
     display: inline-flex;
+    margin-left: .5rem;
     height: 1px;
     font-size: 125%;
     font-weight: 700;
